# wyvern-cli

./: README.md  pyproject.toml
tests/: test_wyvern_cli.py
wyvern_cli/: application.py  client.py  main.py  old.py
